--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
  
 #cabecalho {
     height: 100px;
-    background-color: rgb(255, 127, 127);
+    background-color: rgb(218, 32, 146);
     margin: 0 auto;
 }
 
@@ -19,7 +19,27 @@
 }  
  
 #principal }
-    Wid
+    Width: 80%;
+    height: 600px;
+    background-color:azure;
+    float: left;
+    margin-top: 10 px;
+    margin-bottom: 10 px;
+
+}   
+
+#rodape {
+    height:50px;
+    background-color: aquamarine(212,212,192);
+    clear:both;
+
+}
+
+p {
+    text-align:center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size:16px ;
+    color: rgb(43,226,156);
 
 
 
