--- a/style.css
+++ b/style.css
@@ -1,45 +1,108 @@
-{
-     margin: 0;
-     padding: 0;
+*{
+    margin: 0;
+    padding: 0;
 }
- 
+
 #cabecalho {
     height: 100px;
     background-color: rgb(218, 32, 146);
     margin: 0 auto;
+
+ 
 }
 
 #menu {
     width: 20%;
     height: 600px;
-    background-color: rgba(164, 229, 231, 0.863);
+    background-color: rgba(164,229,231, 0.863);
     float: left;
     margin-top: 10px;
-
-}  
- 
-#principal }
-    Width: 80%;
-    height: 600px;
-    background-color:azure;
-    float: left;
-    margin-top: 10 px;
-    margin-bottom: 10 px;
-
-}   
-
-#rodape {
-    height:50px;
-    background-color: aquamarine(212,212,192);
-    clear:both;
-
 }
 
+#menu > a{
+    text-decoration: none;
+    text-align: center;
+    display: block;
+}
+
+#principal {
+    width: 80%;
+    height: 600px;
+    background-color: azure;
+    float: left;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+h5{
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+}
+
+#rodape {
+    background-color: aquamarine(212, 212, 192);
+}
+
+
 p {
-    text-align:center;
+    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    font-size:16px ;
-    color: rgb(43,226,156);
+    font-size: 16px;
+   color:black(43, 226, 156);
+}
+
+#clear{
+    clear: both;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
